--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,12 @@
                   </svg></span></button>
             </form>
           </div>
+          <div class="buttons">
+            <div class="avatar">
+              <button><span>
+                  <image src="https://yt3.ggpht.com/-rMvpUlx0EeY/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rcWz2rScGz3ZegqqHIdthlVrpWzHg/s88-c-k-c0xffffffff-no-rj-mo/photo.jpg"></image></span></button>
+            </div>
+          </div>
         </div>
       </header>
       <!-- HEADER EOF-->
