--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
       <!-- BEGIN HEADER-->
       <header>
         <div class="wrapper">
-          <div class="hamburger">
+          <div class="hamburger btn btn_js">
             <div class="inner">
               <div class="line"></div>
               <div class="line"></div>
@@ -68,8 +68,43 @@
             </form>
           </div>
           <div class="buttons">
+            <div class="meet btn btn_js">
+              <div class="inner">
+                <button class="button_transparent"><span class="image_wrap">
+                    <svg class="style-scope yt-icon" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" style="pointer-events: none; display: block; width: 100%; height: 100%;">
+                      <g class="style-scope yt-icon">
+                        <path class="style-scope yt-icon" d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4zM14 13h-3v3H9v-3H6v-2h3V8h2v3h3v2z"></path>
+                      </g>
+                    </svg></span></button>
+              </div>
+              <div class="animated"></div>
+            </div>
+            <div class="menu btn btn_js">
+              <div class="inner">
+                <button class="button_transparent"><span class="image_wrap">
+                    <svg class="style-scope yt-icon" viewbox="0 0 24 24" preserveaspectratio="xMidYMid meet" focusable="false" style="pointer-events: none; display: block; width: 100%; height: 100%;">
+                      <g class="style-scope yt-icon">
+                        <path class="style-scope yt-icon" d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z">
+                          <path class="style-scope yt-icon" d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"></path>
+                        </path>
+                      </g>
+                    </svg></span></button>
+              </div>
+              <div class="animated"></div>
+            </div>
+            <div class="notifications btn btn_js">
+              <div class="inner">
+                <button class="button_transparent"><span class="image_wrap">
+                    <svg class="style-scope yt-icon" viewbox="0 0 24 24" preserveaspectratio="xMidYMid meet" focusable="false" style="pointer-events: none; display: block; width: 100%; height: 100%;">
+                      <g class="style-scope yt-icon">
+                        <path class="style-scope yt-icon" d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"></path>
+                      </g>
+                    </svg></span></button>
+              </div>
+              <div class="animated"></div>
+            </div>
             <div class="avatar">
-              <button><span>
+              <button class="button_transparent"><span class="img_wrap">
                   <image src="https://yt3.ggpht.com/-rMvpUlx0EeY/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rcWz2rScGz3ZegqqHIdthlVrpWzHg/s88-c-k-c0xffffffff-no-rj-mo/photo.jpg"></image></span></button>
             </div>
           </div>
