--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,37 @@
     <meta name="keywords" content="">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic')-->
   </head>
   <body class="loaded">
     <!-- BEGIN BODY-->
-    <div class="main-wrapper">
+    <div class="main_wrapper">
       <!-- BEGIN CONTENT-->
-      <main class="content">
-        <div class="wrapper"></div>
+      <main class="main_content">
+        <div class="wrapper">
+          <div class="inner">
+            <section class="items_section">
+              <div class="header">
+                <h2 class="title">Рекомендованные</h2>
+              </div>
+              <div class="content">
+                <div class="inner">
+                  <div class="item">
+                    <div class="thumbnail">
+                      <div class="inner">
+                        <div class="image_wrap"><img src="img/grid1.webp"></div>
+                        <div class="overlays">
+                          <div class="time_status"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="details"></div>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
       </main>
       <!-- CONTENT EOF-->
       <!-- BEGIN HEADER-->
