--- a/app/index.html
+++ b/app/index.html
@@ -25,11 +25,19 @@
               <div class="content">
                 <div class="inner">
                   <div class="item">
-                    <div class="thumbnail">
+                    <div class="item_thumbnail">
                       <div class="inner">
-                        <div class="image_wrap"><img src="img/grid1.webp"></div>
-                        <div class="overlays">
-                          <div class="time_status"></div>
+                        <div class="image_wrap"><img src="img/grid1.webp">
+                          <div class="icon_play_wrap">
+                            <svg class="style-scope yt-icon" viewbox="0 0 24 24" preserveaspectratio="xMidYMid meet" focusable="false" style="pointer-events: none; display: block; width: 100%; height: 100%;">
+                              <g class="style-scope yt-icon">
+                                <path class="style-scope yt-icon" d="M8 5v14l11-7z"></path>
+                              </g>
+                            </svg>
+                          </div>
+                          <div class="overlays">
+                            <div class="time_status"></div>
+                          </div>
                         </div>
                       </div>
                     </div>
